syntax = "proto3";

option csharp_namespace = "AccountResourceAccess.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ResourceAccess {
    rpc GetUserOnUserName(GetUserOnUserNameRequest) returns (GetUserOnUserNameResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc GetUserWithRefreshToken(GetUserWithRefreshTokenRequest) returns (GetUserWithRefreshTokenResponse);
}

message GetUserOnUserNameRequest{
    string userName = 1;
    string HashedPassword = 2;
}

message GetUserOnUserNameResponse{
    UserMessage user = 1;
}

message UpdateUserRequest{
    UserMessage user = 1;
}

message UpdateUserResponse{
    UserMessage user = 1;
}

message GetUserWithRefreshTokenRequest{
    string refreshToken = 1;
}

message GetUserWithRefreshTokenResponse{
    UserMessage user = 1;
}

message UserMessage{
    string userId = 1;
    string userName = 2;
    string Firstname = 3;
    string Lastname = 4;
    string Role = 5;
    repeated RefreshTokenMessage refreshTokens = 6; 
}


message RefreshTokenMessage {
    string Token = 1;
    google.protobuf.Timestamp Expires = 2;
    google.protobuf.Timestamp Created = 3;
    string CreatedByIp = 4;
    google.protobuf.Timestamp Revoked = 5;
    string RevokedByIp = 6;
    string RevokedByToken = 7;
}
